Decouple Function Curves From Grid Information
We don't really need the full ECLGraph structure in order to
extract the curves for scaled/unscaled saturation functions or
the FVF/viscosity property curves as functions of pressure. This
commit switches to using ECLInitFileData exclusively as the
source for those curves, albeit at the API cost of the caller
having to provide a grid ID--a string containing the grid name,
empty string for the global grid and LGR name for a local
grid--and a saturation region (SATNUM) for the saturation
functions.

In other words, this switches the "active cell" to being
relative to the particular grid instead of relative to the
ECLGraph.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -192,19 +192,19 @@ target_link_libraries(computeTracers
     Boost::filesystem
 )
 
-add_executable(dynamicCellProperty)
-target_sources(dynamicCellProperty
-  PRIVATE
-    examples/dynamicCellProperty.cpp
-    examples/exampleSetup.hpp
-)
-target_link_libraries(dynamicCellProperty
-  PUBLIC
-    OpmFDApplications
-    FDExampleParameterHandling
-    OpmFDEngine::OpmFDEngine
-    Boost::filesystem
-)
+#add_executable(dynamicCellProperty)
+#target_sources(dynamicCellProperty
+#  PRIVATE
+#    examples/dynamicCellProperty.cpp
+#    examples/exampleSetup.hpp
+#)
+#target_link_libraries(dynamicCellProperty
+#  PUBLIC
+#    OpmFDApplications
+#    FDExampleParameterHandling
+#    OpmFDEngine::OpmFDEngine
+#    Boost::filesystem
+#)
 
 add_executable(extractFromRestart)
 target_sources(extractFromRestart
@@ -230,6 +230,11 @@ target_link_libraries(extractPropCurves
     FDExampleParameterHandling
     OpmFDEngine::OpmFDEngine
     Boost::filesystem
+)
+
+install(TARGETS extractPropCurves
+  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
 )
 
 add_executable(computeFlowStorageCurve)
